# kommo-matcher

./: .gitignore  README.md  iniciar.command  pyproject.toml  requirements.txt
app/: main.py
app/static/: index.html
examples/: contactos_ejemplo.csv  importar_ejemplo.csv  leads_ejemplo.csv
matcher/: __init__.py  matching.py  models.py  normalize.py  pipeline.py  reader.py
tests/: test_matching.py  test_name_similarity.py  test_normalize_date.py  test_normalize_dni.py  test_normalize_name.py  test_normalize_phone.py  test_output.py  test_pipeline.py  test_reader.py
