[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kommo-matcher"
version = "0.1.0"
description = "Assign existing Kommo contact/lead IDs to a database before import, with human review of edge cases."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
